# luv

./: .env.example  .gitignore  AGENTS.md  AWS_BEDROCK_PLAN.md  CLAUDE.md  DECISIONS.md  IDEA.md  Makefile  README.md  ROADMAP.md  TODO.md  VISION.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bundle-size.yml  ci.yml
benchmarks/: README.md  luv-app.ts  openai-sdk-app.ts  package.json  run.sh  vercel-app.ts
core/: .gitignore  Cargo.toml  build.zig  build.zig.zon
core/fixtures/agent_scenarios/001_simple_chat/: meta.json  scenario.json
core/fixtures/agent_scenarios/002_tool_round_trip/: meta.json  scenario.json
core/fixtures/agent_scenarios/003_max_iterations/: meta.json  scenario.json
core/fixtures/openai/001_single_user/: meta.json  request.json  response.json
core/fixtures/openai/011_stream_basic/: meta.json  request.json  response.sse.txt
core/fixtures/openai/020_tool_calls_basic/: meta.json  request.json  response.json
core/fixtures/openai/021_tool_round_trip/: meta.json  request.json  response.json
core/fixtures/openai/022_parallel_tool_calls/: meta.json  request.json  response.json
core/src/: lib.zig  main.rs  main.zig
core/src/agent/: agent.zig  agent_machine.zig
core/src/morphisms/: luv.zig  openai.md
core/src/morphisms/anthropic/: anthropic.zig
core/src/morphisms/luv/: error_classify.zig  luv.zig  luv_stream.zig  object_extract.zig  tool_args.zig  tool_calls.zig
core/src/morphisms/openai/: openai.zig  openai_stream.zig
core/src/requesters/openai/: openai.zig  openai_stream.zig
core/src/transport/: http.zig  mock.zig  transport.zig
core/src/wasm_abi/: abi.zig  codec.zig  codec_conformance.json  effect.zig  exports.zig  schema_codec.zig  wire.zig
core/tools/: gen_sdk.zig  gen_ts_types.zig  gen_wire.zig
examples/claw-browser/: agent.js  (+6 more)
plans/: converge-in-zig.md  generate-sdks.md
site/: README.md  astro.config.mjs  package.json  tsconfig.json
spec/: README.md  SPEC.md
test-tools/: build.zig  build.zig.zon  record_openai.zig
(+302 files in other folders)
