[package]
name = "luv_core"
version = "0.1.0"
edition = "2024"

[dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"
single_use_lifetimes = "warn"
variant_size_differences = "warn"
unused_results = "warn"
let_underscore_drop = "warn"
unused_crate_dependencies = "warn"
unused_macro_rules = "warn"
non_ascii_idents = "deny"
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Panics & error handling
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unwrap_in_result = "deny"
indexing_slicing = "deny"
string_slice = "deny"
arithmetic_side_effects = "deny"

# Stubs
todo = "deny"
unimplemented = "deny"
unreachable = "deny"

# Debug leftovers
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
use_debug = "deny"

# Sloppy patterns
mem_forget = "deny"
clone_on_ref_ptr = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
lossy_float_literal = "deny"
str_to_string = "deny"
verbose_file_reads = "deny"
try_err = "deny"
wildcard_enum_match_arm = "deny"
exit = "deny"

# Noisy lints we explicitly opt out of
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "allow"
option_if_let_else = "allow"
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
similar_names = "allow"
